Refactored standard session files management