@@ -1,11 +1,11 @@
 package org.sirius.frontend.core;
 
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import java.util.Arrays;
 import java.util.List;
 
-import org.junit.jupiter.api.Disabled;
-import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.sirius.common.error.AccumulatingReporter;
@@ -13,36 +13,36 @@ import org.sirius.common.error.Reporter;
 import org.sirius.common.error.ShellReporter;
 import org.sirius.frontend.api.ModuleDeclaration;
 import org.sirius.frontend.api.PackageDeclaration;
-import org.sirius.frontend.ast.AstPackageDeclaration;
+import org.sirius.frontend.core.stdlayout.ModuleFiles;
+import org.sirius.frontend.core.stdlayout.PackageFiles;
 
 
 public class FrontEndTest {
 
-	// TODO: restore
 	@Test
-//	@Disabled
 	@DisplayName("Standard compilation unit not implemented in new visitor-based parser")
 	public void singleEmptyModuleMustHaveOneModuleContent() {
 		Reporter reporter = new AccumulatingReporter(new ShellReporter());
  
-		FrontEnd frontEnd = new FrontEnd(reporter);
-		StandardSession session = frontEnd.createStandardSession(Arrays.asList(
-				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}")
-		));
+		ModuleFiles mf = new ModuleFiles(
+				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}"), //StdInputTextProvider moduleDescriptor,
+				List.of());
+		StandardSession session = new StandardSession(reporter, List.of(mf));
+
 		List<ModuleDeclaration> moduleContents = session.getModuleDeclarations();
 		assertEquals(moduleContents.size(), 1);
 		assertEquals(moduleContents.get(0).getPhysicalPath().getElements(), Arrays.asList("a", "b"));
 	}
 	
 	@Test
-	@Disabled
 	public void moduleWithoutExplicitPackageHasADefautltPackage() {
 		Reporter reporter = new AccumulatingReporter(new ShellReporter());
  
-		FrontEnd frontEnd = new FrontEnd(reporter);
-		StandardSession session = frontEnd.createStandardSession(Arrays.asList(
-				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}")
-		));
+		ModuleFiles mf = new ModuleFiles(
+				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}"), //StdInputTextProvider moduleDescriptor,
+				List.of());
+		StandardSession session = new StandardSession(reporter, List.of(mf));
+		
 		List<ModuleDeclaration> moduleContents = session.getModuleDeclarations();
 		assertEquals(moduleContents.size(), 1);
 		
@@ -50,24 +50,21 @@ public class FrontEndTest {
 		assertEquals(mc.getPackages().size(), 1);
 		PackageDeclaration pd = mc.getPackages().get(0);
 		
-//		assertEquals(pc.getPackageDeclaration().getPathElements(), Arrays.asList("a", "b"));
 		assertEquals(pd.getQName().getStringElements(), Arrays.asList("a", "b"));
 	}
 	
 	@Test
-	@Disabled
 	public void moduleWithExplicitPackageHasNoDefautltPackage() {
 		Reporter reporter = new AccumulatingReporter(new ShellReporter());
  
-		FrontEnd frontEnd = new FrontEnd(reporter);
-		StandardSession session = frontEnd.createStandardSession(Arrays.asList(
-				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}"),
-				new TextInputTextProvider("a/b", "package.sirius", "package a.b;")
-		));
+		ModuleFiles mf = new ModuleFiles(
+				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}"), //StdInputTextProvider moduleDescriptor,
+				List.of(new PackageFiles(new TextInputTextProvider("a/b", "package.sirius", "package a.b;"), List.of())));
+		StandardSession session = new StandardSession(reporter, List.of(mf));
+		
 		List<ModuleDeclaration> moduleDeclarations = session.getModuleDeclarations();
 		assertEquals(moduleDeclarations.size(), 1);
 		
-//		assertEquals(moduleContents.get(0).getModulePath().getElements(), Arrays.asList("a", "b"));
 		ModuleDeclaration mc = moduleDeclarations.get(0);
 		assertEquals(1, mc.getPackages().size());
 		PackageDeclaration pc = mc.getPackages().get(0);
@@ -77,16 +74,20 @@ public class FrontEndTest {
 	
 	
 	@Test
-	@Disabled
 	public void parseNamedModuleContent() {
 		Reporter reporter = new AccumulatingReporter(new ShellReporter());
  
 		FrontEnd frontEnd = new FrontEnd(reporter);
-		StandardSession session = frontEnd.createStandardSession(Arrays.asList(
-				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}"),
-				new TextInputTextProvider("a/b", "package.sirius", "package a.b;"),
-				new TextInputTextProvider("a/b", "A.sirius", "class A(){}")
-		));
+
+		ModuleFiles mf = new ModuleFiles(
+				new TextInputTextProvider("a/b", "module.sirius", "module a.b \"1\" {}"), //StdInputTextProvider moduleDescriptor,
+				List.of(new PackageFiles(
+						new TextInputTextProvider("a/b", "package.sirius", "package a.b;"), 
+						List.of(
+							new TextInputTextProvider("a/b", "A.sirius", "class A(){}"))
+				)));
+
+		StandardSession session = new StandardSession(reporter, List.of(mf));
 		
 		List<ModuleDeclaration> moduleContents = session.getModuleDeclarations();
 		assertEquals(moduleContents.size(), 1);
@@ -104,9 +105,6 @@ public class FrontEndTest {
 		
 		/**
 		assertEquals(cu0.getClassDeclarations().get(0).getName().getText(), "A");
-		assertEquals(cu0.getClassDeclarations().get(0).getName().getText(), "A");
-		
-		
 		
 		ModuleDescriptor mdcu = module.getModuleDescriptorCompilationUnit();
 		assertEquals(mdcu.getModuleDeclaration().getqName().dotSeparated(), "a.b");
